# drive_arcade

./: .gitignore  CMakeLists.txt  car.h  compile_commands.json  defines.h  main.cpp  run.ps1  track.cpp  track.h  track_loader.cpp  track_loader.h  track_sample.track  utility.cpp  utility.h
.cache/clangd/index/: SDL.h.1CE8C43DE22F4F19.idx  SDL_assert.h.9BBD164A6CAC4EF9.idx  SDL_atomic.h.29F1842E9E1596DE.idx  SDL_audio.h.B975D224AB628C94.idx  SDL_blendmode.h.3D79ABBCB05CC06D.idx  SDL_clipboard.h.09BC3F99CD1DF2E4.idx  SDL_config.h.736F900C8C6C7A60.idx  SDL_cpuinfo.h.275697E8BC77A108.idx  SDL_endian.h.21EBAD1A24D4F86C.idx  SDL_error.h.E687228C6932926A.idx  SDL_events.h.C0EBF00661124115.idx  SDL_filesystem.h.6509F8929B341E77.idx  SDL_gamecontroller.h.10C448A1D48CF176.idx  SDL_gesture.h.B8F087BC5A926A1A.idx  SDL_haptic.h.18268FACC0AF9FA8.idx  SDL_hidapi.h.F8ADB699613F9069.idx  SDL_hints.h.258DD004EC6446C5.idx  SDL_joystick.h.8AA33D26E1418E22.idx  SDL_keyboard.h.B1F5BF385663DA77.idx  SDL_keycode.h.5463B016F58DDA2F.idx  SDL_loadso.h.DC28D04C6E796FF9.idx  SDL_locale.h.3A5CEDEA9DFE9706.idx  SDL_log.h.112421083E61B91E.idx  SDL_main.h.F05C864A058CBAE1.idx  SDL_messagebox.h.3CE66CF1205A4FBF.idx  SDL_metal.h.1DFC304EFE410C7B.idx  SDL_misc.h.C520BA029B2DB2B7.idx  SDL_mouse.h.2BC57F09F7D50814.idx  SDL_mutex.h.95D67454A221D827.idx  SDL_pixels.h.974E500786F514EA.idx  SDL_platform.h.4F29A9F1B9478BD9.idx  SDL_power.h.F680ED592186B75D.idx  SDL_quit.h.627A9E3AF1440A3A.idx  SDL_rect.h.19504BA53DD85833.idx  SDL_render.h.6826648CDC26BF37.idx  SDL_rwops.h.4BF66511D7E702AE.idx  (+15 more)
