cmake_minimum_required(VERSION 3.10)
project(DRIVING_GAME LANGUAGES CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS True)
set(CMAKE_CXX_STANDARD 20)

if(WIN32)
add_executable(game WIN32 main.cpp)
target_include_directories(game PRIVATE include "D:/usr/include")
target_link_directories(game PRIVATE lib "D:/usr/lib")
target_link_libraries(game SDL2main SDL2)
else()
add_executable(game main.cpp)
target_link_libraries(game SDL2main SDL2)
endif()
